--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
     <script src="~/Scripts/myScripts/recordCtrl.js"></script>
     <script src="~/Scripts/myScripts/modalRecordCompare.js"></script>
     <script src="~/Scripts/ui.bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+    <script src="~/Scripts/textAngular.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
