--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div id="disc">
         </div>
-        <button class="btn btn-default" ng-click="addNote()">Add note.</button>
+        <button class="btn btn-default" ng-click="addNote()">Add note</button>
         <script type="text/ng-template" id="addNoteModal.html">
             <div class="modal-header">
                 <h3 class="modal-title">
@@ -21,12 +21,14 @@
             <button class="btn btn-warning" ng-click="cancel()">Close</button>
         </script>
         <div id="record" hidden="hidden" ng-controller="recordCtrl">
+            <img ng-src={{record.AvatarPath}} />
             <div id="nameModel">
                 {{record.Name}}
             </div>
             <div id="descriptionModel">
                 {{record.Description}}
             </div>
+            <p>Create by {{creator.Login}}</p>
             <script type="text/ng-template" id="myModalContent.html">
                 <div class="modal-header">
                     <h3 class="modal-title">Compare with:</h3>
@@ -56,10 +58,10 @@
                 <button class="btn btn-primary" ng-click="return()">Return</button>
                 <button class="btn btn-warning" ng-click="close()">Close</button>
             </script>
-            <button class='btn btn-success' ng-click="open(record.ThemeID)">
+            <button class='btn btn-success' ng-click="open(record.Id_Category)">
                 Compare
             </button>
-            <button id="say" class="btn btn-primary" ng-click="sayThank(record.ThemeID)">
+            <button id="say" class="btn btn-primary" ng-disabled="thankDisable" ng-click="sayThank(record.Id_Note)">
                 To say thank you.
             </button>
             <div>
