--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
     <script src="~/Scripts/myScripts/modalCompareCtrl.js"></script>
     <script src="~/Scripts/myScripts/recordCtrl.js"></script>
     <script src="~/Scripts/myScripts/modalRecordCompare.js"></script>
+    <script src="~/Scripts/myScripts/addNoteCtrl.js"></script>
     <script src="~/Scripts/ui.bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="~/Scripts/textAngular.js"></script>
 
