--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -17,8 +17,13 @@
                     Adding
                 </h3>
             </div>
-            <button class="btn btn-primary" ng-click="ok()">Return</button>
-            <button class="btn btn-warning" ng-click="cancel()">Close</button>
+            <div class="modal-body">
+                <input type="file" />
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" ng-click="ok()">Ok</button>
+                <button class="btn btn-warning" ng-click="cancel()">Close</button>
+            </div>
         </script>
         <div id="record" hidden="hidden" ng-controller="recordCtrl">
             <img ng-src={{record.AvatarPath}} />
