--- a/MvcApp/Views/Account/Account.cshtml
+++ b/MvcApp/Views/Account/Account.cshtml
@@ -1,34 +1,8 @@
-﻿@using LogicLayer
-@model MvcApp.Models.Account.AccountViewModel
-
-@{
-    ISecurityHelper _securityHelper = ViewBag.SecurityHelper;
-
-    bool IsAdmin = _securityHelper.GetRole(User.Identity.Name) == "Admin";
-
-    if (IsAdmin)
-    {
-        Layout = "~/Views/Shared/_AdminAccount.cshtml";
-    }
-    else
-    {
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-
+﻿@{
     ViewBag.Title = "Account";
 }
 
-@if (!IsAdmin)
-{
-    <div class="container body-content">
-        @Html.Partial("_Account")
-    </div>
-}
-else
-{
-    @Html.Partial("_Account")
-}
-
-
-
-
+<div class="container body-content">
+    <h2>Account</h2>
+    <hr />
+</div>
