messages into layout
(SignalR script)

--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -65,6 +65,11 @@
     <script src="~/Scripts/dashboard/morris-data.js"></script>
     <script src="~/Scripts/dashboard/sb-admin-2.js"></script>
 
+    <!--SignalR-->
+    <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
+    <script src="~/signalr/hubs"></script>
+    <script src="~/Scripts/SignalR/addMessageToLayoutDropMessages.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
