Adding like system, adding status for notes. Fix bugs with clear id.

--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -86,7 +86,7 @@
             <button class='btn btn-success' ng-click="open(record.Id_Category)">
                 Compare
             </button>
-            <button id="say" class="btn btn-primary" ng-disabled="thankDisable" ng-click="sayThank(record.Id_Note)">
+            <button id="say" class="btn btn-primary" ng-click="sayThankToNote(record.Id_Note)">
                 To say thank you.
             </button>
             <div>
