--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,10 @@
 ﻿@if (Request.IsAuthenticated)
 {
-   <!--test-->
-    <input type="button" id="okbtn" value="OK" />
-    <!---->
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                <span id="count"></span>
             </a>
             <ul class="dropdown-menu dropdown-messages" id="dropMessages">
                 <!--begin message-->
