--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -53,39 +53,8 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <ul class="chat">
-                    <li class="left clearfix">
-                        <span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle" />
-                        </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Jack Sparrow</strong>
-                                <small class="pull-right text-muted">
-                                    <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
-                                </small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="right clearfix">
-                        <span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle" />
-                        </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <small class=" text-muted">
-                                    <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
-                                </small>
-                                <strong class="pull-right primary-font">Bhaumik Patel</strong>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                            </p>
-                        </div>
-                    </li>
+                <ul class="chat" id="chat-messages">
+                    <!--left begin-->                    
                     <li class="left clearfix">
                         <span class="chat-img pull-left">
                             <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle" />
@@ -102,6 +71,8 @@
                             </p>
                         </div>
                     </li>
+                    <!--left end-->
+                    <!--right begin-->
                     <li class="right clearfix">
                         <span class="chat-img pull-right">
                             <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle" />
@@ -118,6 +89,7 @@
                             </p>
                         </div>
                     </li>
+                    <!--right end-->
                 </ul>
             </div>
             <!-- /.panel-body -->
@@ -135,7 +107,7 @@
         </div>
     </div>
 
-    <script src="~/Scripts/myScripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-2.1.1.js"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.js")"
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
@@ -167,6 +139,12 @@
     <script src="~/Scripts/dashboard/dataTables.bootstrap.js"></script>
     <script src="~/Scripts/myScripts/Chat.js"></script>
     <script src="~/Scripts/ng-grid.min.js"></script>
+
+    <!--SignalR-->
+    <script src="~/Scripts/jquery.signalR-2.1.2.js" ></script>
+    <script src="signalr/hubs"></script>
+    <script src="~/Scripts/SignalR/addMessages.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
