--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -38,7 +38,7 @@
 
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-user fa-fw"></i> @HttpContext.Current.User.Identity.Name  <i class="fa fa-caret-down"></i>
+                <i class="fa fa-user fa-fw"></i><span id="userLogin">@HttpContext.Current.User.Identity.Name</span>   <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
                 <li>
