--- a/MvcApp/Views/Shared/_ChatPartial.cshtml
+++ b/MvcApp/Views/Shared/_ChatPartial.cshtml
@@ -14,7 +14,7 @@
         <div id="hiddenChat">
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <ul class="chat">
+                <ul class="chat" id="chat-messages">
                     <li class="left clearfix">
                         <span class="chat-img pull-left">
                             <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle" />
