--- a/MvcApp/Views/Shared/_ChatPartial.cshtml
+++ b/MvcApp/Views/Shared/_ChatPartial.cshtml
@@ -1,52 +1,24 @@
 ﻿
-<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden;">
+<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden;" id="allChat">
 
     <div class="chat-panel panel panel-default">
         <div class="panel-heading">
             <i class="fa fa-comments fa-fw"></i>
             Chat
             <div class="btn-group pull-right">
-                <button type="button" class="btn btn-default btn-xs dropdown-toggle" id="minimize" data-toggle="dropdown">
+                <button type="button" class="btn btn-default btn-xs" id="minimize">
                     <i class="fa fa-chevron-down"></i>
+                </button>
+                <button type="button" class="btn btn-default btn-xs" id="close">
+                    <i class="fa fa-times fa-fw"></i>
                 </button>
             </div>
         </div>
         <div id="hiddenChat">
             <!-- /.panel-heading -->
-            <div class="panel-body">
+            <div class="panel-body" id="scroll">
                 <ul class="chat" id="chat-messages">
-                    <li class="left clearfix">
-                        <span class="chat-img pull-left">
-                            <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle" />
-                        </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Jack Sparrow</strong>
-                                <small class="pull-right text-muted">
-                                    <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
-                                </small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="right clearfix">
-                        <span class="chat-img pull-right">
-                            <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle" />
-                        </span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <small class=" text-muted">
-                                    <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
-                                </small>
-                                <strong class="pull-right primary-font">Bhaumik Patel</strong>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                            </p>
-                        </div>
-                    </li>
+
                 </ul>
             </div>
             <!-- /.panel-body -->
