--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="Chat">
+<html ng-app="myApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +16,11 @@
     <link href="~/Content/dashboard/dataTables.bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Chat.css" rel="stylesheet" />
     <link href="~/Content/ng-grid.css" rel="stylesheet" />
+
+
+
 </head>
-<body>
+<body ng-controller="catalogCtrl">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -43,9 +46,10 @@
         @Html.Partial("_ChatPartial");
     }
 
-   
 
-    <script src="~/Scripts/myScripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-2.1.1.min.js"></script>
+    <script src="~/Scripts/jquery.cookie.js"></script>
+    <script src="~/Scripts/myScripts/angular.js"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.js")"
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
@@ -57,7 +61,7 @@
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
-    <script src="~/Scripts/myScripts/angular.js"></script>
+
     <script src="~/Scripts/myScripts/angular.treeview.js"></script>
     <script src="~/Scripts/myScripts/App.js"></script>
     <script src="~/Scripts/myScripts/catalogService.js"></script>
@@ -74,12 +78,10 @@
     <script src="~/Scripts/dashboard/jquery.dataTables.js"></script>
     <script src="~/Scripts/dashboard/dataTables.bootstrap.js"></script>
     <script src="~/Scripts/ng-grid.min.js"></script>
-    <script src="~/Scripts/jquery.cookie.js"></script>
-    <script src="~/Scripts/myScripts/Chat.js"></script>
 
     <!--SignalR-->
-    <script src="~/Scripts/jquery.signalR-2.1.2.js" ></script>
-    <script src="signalr/hubs"></script>
+    <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
+    <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/SignalR/addMessages.js"></script>
 
     @RenderSection("scripts", required: false)
