--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -1,28 +1,25 @@
 ﻿@if (Request.IsAuthenticated)
 {
+
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-messages">
-                <li>
-                    <a href="#" id="messageClick">
+                <li ng-repeat="message in chatData">
+                    <a href="" ng-click="messageClick(message.Id)">
                         <div>
-                            <strong>John Smith</strong>
+                            <strong id="loginOne">{{message.User}}</strong>
                             <span class="text-muted">
                                 <em>
                                     <shortdate style="color:red">
-                                        @DateTime.Now.ToShortDateString()
+                                        {{message.Date}}
                                     </shortdate>
-                                    <shortTime style="color:blue">
-                                        @DateTime.Now.ToShortTimeString()
-                                    </shortTime>
-                                
                                 </em>
                             </span>
                         </div>
-                        <div>Lorem sdhfuiasgfuysdiyufgsuyfsdugfwuagusdg sfhiud sidhfi</div>
+                        <div>{{message.Message}}</div>
                     </a>
                 </li>
                 <li class="divider"></li>
