--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -3,28 +3,10 @@
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                <i class="fa fa-envelope fa-fw"></i><i class="fa fa-caret-down"></i>
+                <span id="count" style="color:yellow"></span>
             </a>
             <ul class="dropdown-menu dropdown-messages" id="dropdown-messages">
-                <li>
-                    <a href="#" id="messageClick">
-                        <div>
-                            <strong>John Smith</strong>
-                            <span class="text-muted">
-                                <em>
-                                    <shortdate style="color:red">
-                                        @DateTime.Now.ToShortDateString()
-                                    </shortdate>
-                                    <shortTime style="color:blue">
-                                        @DateTime.Now.ToShortTimeString()
-                                    </shortTime>
-                                
-                                </em>
-                            </span>
-                        </div>
-                        <div>Lorem sdhfuiasgfuysdiyufgsuyfsdugfwuagusdg sfhiud sidhfi</div>
-                    </a>
-                </li>
                 <li class="divider"></li>
                 <li>
                     <a class="text-center" href="~/Account/Chat">
