--- a/MvcApp/Views/Account/Chat.cshtml
+++ b/MvcApp/Views/Account/Chat.cshtml
@@ -15,66 +15,63 @@
     }
 }
 
-<html ng-app="Chat">
-<body ng-controller="MyCtrl">
-    @*<div id="page-wrapper">
-            <div class="container-fluid" style="bottom: 0">
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Chat</h1>
-                    </div>
-                </div>
-                <div class="gridStyle" ng-grid="gridOptions"></div>
-            </div>
-        </div>*@
-
-    <div id="page-wrapper">
+@*<div id="page-wrapper">
         <div class="container-fluid" style="bottom: 0">
+
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Chat</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            DataTables Advanced Tables
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                    <thead>
-                                        <tr>
-                                            <th>User full name</th>
-                                            <th>Date of last message</th>
-                                            <th>Message</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="even gradeC" ng-repeat="data in myData" ng-click="lol(data.Id)">
-                                    <td> <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle">{{ data.User }}</td>
-                                    <td>{{data.Date}}</td>
-                                    <td>{{data.Message}}</td>
+            <div class="gridStyle" ng-grid="gridOptions"></div>
+        </div>
+    </div>*@
+
+<div id="page-wrapper" ng-controller="messageCtrl">
+    <div class="container-fluid" style="bottom: 0">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Chat</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        DataTables Advanced Tables
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                    <tr>
+                                        <th>User full name</th>
+                                        <th>Date of last message</th>
+                                        <th>Message</th>
                                     </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                                </thead>
+                                <tbody>
+                                    <tr class="even gradeC" ng-repeat="data in myData" ng-click="showChat(data.Login)">
+                                        <td> <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle">{{ data.Login }}</td>
+                                        <td>{{data.Date}}</td>
+                                        <td>{{data.Message}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="~/Scripts/jquery-2.1.1.min.js"></script>
-    <script src="~/Scripts/angular.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#dataTables-example').dataTable();
-        });
-    </script>
-</body>
-</html>
+<script src="~/Scripts/jquery-2.1.1.min.js"></script>
+<script src="~/Scripts/angular.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#dataTables-example').dataTable();
+    });
+</script>
