--- a/MvcApp/Views/Shared/_ChatPartial.cshtml
+++ b/MvcApp/Views/Shared/_ChatPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden; display:none" id="allChat">
+<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden; display:none" id="allChat" ng-controller="messageCtrl">
 
     <div class="chat-panel panel panel-default">
         <div class="panel-heading" id="textLogin">
