--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 
 </head>
-<body ng-controller="catalogCtrl">
+<body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -78,6 +78,7 @@
     <script src="~/Scripts/dashboard/jquery.dataTables.js"></script>
     <script src="~/Scripts/dashboard/dataTables.bootstrap.js"></script>
     <script src="~/Scripts/ng-grid.min.js"></script>
+    <script src="~/Scripts/myScripts/messageCtrl.js"></script>
 
     <!--SignalR-->
     <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
