Fixed bug with two ng-controller Add grid for userInformation

--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <ul class="nav navbar-nav navbar-right" ng-controller="messageCtrl">
+    <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
