--- a/MvcApp/Views/Account/UsersInformation.cshtml
+++ b/MvcApp/Views/Account/UsersInformation.cshtml
@@ -6,12 +6,55 @@
     Layout = "~/Views/Shared/_AccountPartialAdmin.cshtml";
 }
 
-<div id="page-wrapper">
+<div id="page-wrapper" ng-controller="usersInformationCtrl">
+
     <div class="container-fluid" style="bottom: 0">
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Users information</h1>
             </div>
         </div>
+
+        <table class="table paginated">
+            <tr>
+                <th>
+
+                </th>
+                <th>
+                    Full name
+                </th>
+                <th ng-click="loginSort()">
+                    Login
+                </th>
+                <th ng-click="isActiveSort()">
+                    IsActive
+                </th>
+                <th>
+                    Group
+                </th>
+                <th>
+                    Date of registration
+                </th>
+            </tr>
+
+            <tr ng-repeat="user in users | startFrom:currentPage*pageSize | limitTo:pageSize">
+                <td align="center"><a href="" ng-click=""> Edit </a>| <a href="" ng-click=""> Delete </a></td>
+                <td>{{user.Name}} &nbsp; {{user.Surname}}</td>
+                <td ng-click="showInformation(user.Login)">{{user.Login}}</td>
+                <td><input type="checkbox" ng-model="user.IsActive"></td>
+                <td>{{user.Id_Group}}</td>
+                <td>{{user.DateOfRegistration}}</td>
+            </tr>
+
+        </table>
+
     </div>
+
+    <button ng-disabled="currentPage == 0" ng-click="currentPage=currentPage-1">
+        Previous
+    </button>
+    {{currentPage+1}}/{{numberOfPages()}}
+    <button ng-disabled="currentPage >= users.length/pageSize - 1" ng-click="currentPage=currentPage+1">
+        Next
+    </button>
 </div>
