--- a/MvcApp/Views/Shared/_ChatPartial.cshtml
+++ b/MvcApp/Views/Shared/_ChatPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿
-<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden; display:none" id="allChat" ng-controller="messageCtrl">
+<div style="position:fixed;right:0;margin-right:20px;bottom:0px;z-index:2000000005;width:400px;overflow:hidden; display:none" id="allChat">
 
-    <div class="chat-panel panel panel-default">
+    <div class=" chat-panel panel panel-default">
         <div class="panel-heading" id="textLogin">
             <i class="fa fa-comments fa-fw"></i>
             {{chatLogin}}
