--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -21,35 +21,37 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Home page", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div ng-controller="messageCtrl">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Home page", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Catalog", "Index", "CatalogView")</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Catalog", "Index", "CatalogView")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </nav>
+        </nav>
+
+        @if (Request.IsAuthenticated)
+        {
+            @Html.Partial("_ChatPartial");
+        }
+    </div>
+
     @RenderBody()
-
-    @if (Request.IsAuthenticated)
-    {
-        @Html.Partial("_ChatPartial");
-    }
-
 
     <script src="~/Scripts/jquery-2.1.1.min.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
-    <script src="~/Scripts/myScripts/angular.js"></script>
+    <script src="~/Scripts/angular.min.js"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.js")"
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
@@ -79,6 +81,7 @@
     <script src="~/Scripts/dashboard/dataTables.bootstrap.js"></script>
     <script src="~/Scripts/ng-grid.min.js"></script>
     <script src="~/Scripts/myScripts/messageCtrl.js"></script>
+    <script src="~/Scripts/myScripts/usersInformationCtrl.js"></script>
 
     <!--SignalR-->
     <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
