--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <link href="~/Content/dashboard/dataTables.bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Chat.css" rel="stylesheet" />
     <link href="~/Content/ng-grid.css" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/themes/base/all.css")" rel="stylesheet" type="text/css" />
 
 
 
@@ -46,6 +47,8 @@
             @Html.Partial("_ChatPartial");
         }
     </div>
+    
+    
 
     @RenderBody()
 
@@ -62,6 +65,7 @@
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.11.2.min.js")" type="text/javascript"></script>
 
     <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
     <script src="~/signalr/hubs"></script>
@@ -84,6 +88,7 @@
     <script src="~/Scripts/ng-grid.min.js"></script>
     <script src="~/Scripts/myScripts/messageCtrl.js"></script>
     <script src="~/Scripts/myScripts/usersInformationCtrl.js"></script>
+    <script src="~/Scripts/myScripts/Autocomplete.js"></script>
     
     @RenderSection("scripts", required: false)
 </body>
