Add modal window for edit user in userinformation page

--- a/MvcApp/Views/Shared/_AccountPartialAdmin.cshtml
+++ b/MvcApp/Views/Shared/_AccountPartialAdmin.cshtml
@@ -2,8 +2,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <div id="wrapper">
-    <div class="navbar-default sidebar" style="margin-top:0;bottom:0;top:51px" role="navigation">
+    <div class="navbar-default sidebar" style="margin-top:0;bottom:0;top:51px">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
                 <li>
