--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -84,7 +84,8 @@
     <script src="~/Scripts/ng-grid.min.js"></script>
     <script src="~/Scripts/myScripts/messageCtrl.js"></script>
     <script src="~/Scripts/myScripts/usersInformationCtrl.js"></script>
-    
+    <script src="~/Scripts/myScripts/editUserCtrl.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
