--- a/MvcApp/Views/Account/UsersInformation.cshtml
+++ b/MvcApp/Views/Account/UsersInformation.cshtml
@@ -15,6 +15,10 @@
             </div>
         </div>
 
+        <div style="margin-bottom:10px">
+            Records per page : {{pageSize}}
+        </div>
+
         <table class="table paginated">
             <tr>
                 <th>
@@ -38,9 +42,9 @@
             </tr>
 
             <tr ng-repeat="user in users | startFrom:currentPage*pageSize | limitTo:pageSize">
-                <td align="center"><a href="" ng-click=""> Edit </a>| <a href="" ng-click=""> Delete </a></td>
+                <td align="center"><a href="" ng-click="edit(user.Login)"> Edit </a>| <a href="" ng-click=""> Delete </a></td>
                 <td>{{user.Name}} &nbsp; {{user.Surname}}</td>
-                <td ng-click="showInformation(user.Login)">{{user.Login}}</td>
+                <td>{{user.Login}}</td>
                 <td><input type="checkbox" ng-model="user.IsActive" ng-click="checkClick(user.Login,user.IsActive)"></td>
                 <td>{{user.Id_Group}}</td>
                 <td>{{user.DateOfRegistration}}</td>
@@ -55,6 +59,82 @@
         <a id="nextButton" href="" ng-click="nextClick()">
             Next
         </a>
+
+        <script type="text/ng-template" id="editUserModal.html">
+            <div class="modal-header">
+                <h3 class="modal-title">
+                    Adding
+                </h3>
+            </div>
+
+            <div style="margin:30px">
+
+                <img src="http://placehold.it/100/55C1E7/fff" alt="User Avatar" class="img-circle">
+                <div class="container body-content" style="margin-top:-100px">
+
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <div class="col-md-2 control-label">
+                                Name
+                            </div>
+                            <input ng-model="user.Name" class="col-md-10 form-control inline" />
+
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-2 control-label">
+                                Surname
+                            </div>
+                            <input ng-model="user.Surname" class="col-md-10 form-control inline" />
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-2 control-label">
+                                E-mail
+                            </div>
+                            <input ng-model="user.Email" class="col-md-10 form-control inline" />
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-2 control-label">
+                                Group
+                            </div>
+                            <input ng-model="user.Group" class="col-md-10 form-control inline" />
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+                <table class="table paginated" style="margin-top:20px">
+                    <tr>
+                        <th>
+                            Download
+                        </th>
+                        <th>
+                            Upload
+                        </th>
+                        <th>
+                            Said thanks
+                        </th>
+                        <th>
+                            Received thanks
+                        </th>
+                    </tr>
+
+                    <tr>
+                        <td>{{}}</td>
+                        <td>{{}}</td>
+                        <td>{{}}</td>
+                        <td>{{}}</td>
+                    </tr>
+
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" ng-click="ok()">Ok</button>
+                <button class="btn btn-warning" ng-click="cancel()">Close</button>
+            </div>
+        </script>
 
     </div>
 </div>
