--- a/MvcApp/Views/Account/Chat.cshtml
+++ b/MvcApp/Views/Account/Chat.cshtml
@@ -5,7 +5,7 @@
 
     SecurityHelper _securityHelper = ViewBag.SecurityHelper;
 
-    if (_securityHelper.GetGroupForUser(User.Identity.Name).Contains("admin"))
+    if (_securityHelper.GetGroupForUser(User.Identity.Name).Contains("Admin"))
     {
         Layout = "~/Views/Shared/_AccountPartialAdmin.cshtml";
     }
@@ -15,65 +15,64 @@
     }
 }
 
-
-@*<div id="page-wrapper">
-        <div class="container-fluid" style="bottom: 0">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Chat</h1>
-                </div>
-            </div>
-            <div class="gridStyle" ng-grid="gridOptions"></div>
-        </div>
-    </div>*@
-
 <div id="page-wrapper" ng-controller="messageCtrl">
     <div class="container-fluid" style="bottom: 0">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Chat</h1>               
+                <h1 class="page-header">Chat</h1>
             </div>
-            <input type="text" data-autocomplete-source="@Url.Action("AutocompleteSearch", "Account")" autocomplete="on" />
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        DataTables Advanced Tables
+
+            <div class="form-horizontal">
+                <div class="form-group">
+                    <div class="col-md-2 control-label">
+                        Add contact
                     </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>User full name</th>
-                                        <th>Date of last message</th>
-                                        <th>Message</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr class="even gradeC" ng-repeat="data in myData" ng-click="showChat(data.Login)">
-                                        <td> <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle">{{ data.Login }}</td>
-                                        <td>{{data.Date}}</td>
-                                        <td>{{data.Message}}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+                    <input type="text" class="col-md-10 form-control inline" data-autocomplete-source="@Url.Action("AutocompleteSearch", "Account")" autocomplete="on" />
+
+                    <input style="margin-left:15px" class="btn btn-success" type="button" value="+Add" />
                 </div>
             </div>
         </div>
+
+        <hr />
+
+        <div style="margin-bottom:10px" class="inline">
+            Records per page : {{pageSize}}
+            <a style="margin-left:10px" id="prevButton" href="" ng-click="prevClick()">
+                Previous
+            </a>
+            {{currentPage+1}}/{{numberOfPages()}}
+            <a id="nextButton" href="" ng-click="nextClick()">
+                Next
+            </a>
+
+        </div>
+
+
+
+        <table class="table paginated">
+            <tr>
+                <th>
+                    Image
+                </th>
+                <th>
+                    Login
+                </th>
+                <th>
+                    Date of last message
+                </th>
+                <th>
+                    Message
+                </th>
+            </tr>
+
+            <tr ng-repeat="contact in contacts | startFrom:currentPage*pageSize | limitTo:pageSize">
+                <td><img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle"></td>
+                <td>{{contact.Login}}</td>
+                <td>{{contact.Date}}</td>
+                <td>{{contact.Message}}</td>
+            </tr>
+        </table>
+
     </div>
 </div>
-
-<script src="~/Scripts/jquery-2.1.1.min.js"></script>
-<script src="~/Scripts/angular.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#dataTables-example').dataTable();
-    });
-</script>
-
