--- a/MvcApp/Views/Shared/_AccountPartialAdmin.cshtml
+++ b/MvcApp/Views/Shared/_AccountPartialAdmin.cshtml
@@ -2,9 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div id="wrapper">
-    <div class="navbar-default sidebar" style="margin-top:0;bottom:0;top:51px">
+    <div class="navbar-default sidebar" style="margin-top:0;bottom:0;top:51px;position:fixed">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
                 <li>
