Add chatCtrl and mainCtrl

--- a/MvcApp/Views/Account/Chat.cshtml
+++ b/MvcApp/Views/Account/Chat.cshtml
@@ -16,7 +16,7 @@
 }
 
 <div id="chatPage" style="display:none">Chat</div>
-<div id="page-wrapper" ng-controller="messageCtrl">
+<div id="page-wrapper" ng-controller="chatCtrl">
     <div class="container-fluid" style="bottom: 0">
         <div class="row">
             <div class="col-lg-12">
