Adding like for document.

--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
     <script src="~/Scripts/myScripts/addNoteCtrl.js"></script>
     <script src="~/Scripts/myScripts/resourceCtrl.js"></script>
     <script src="~/Scripts/myScripts/modalCharacteristic.js"></script>
+    <script src="~/Scripts/myScripts/addFileCtrl.js"></script>
     <script src="~/Scripts/ui.bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="~/Scripts/textAngularSetup.js"></script>
     <script src="~/Scripts/textAngular.js"></script>
@@ -70,6 +71,7 @@
     <script src="~/Scripts/myScripts/loading-bar.js"></script>
     <script src="~/Scripts/myScripts/angular-bootstrap-lightbox.js"></script>
     <script src="~/Scripts/myScripts/lightBoxCtrl.js"></script>
+    <script src="~/Scripts/myScripts/fileUploadService.js"></script>
     <script src="~/Scripts/video.js"></script>
     <script type="text/javascript" charset="utf-8">
         VideoJS.setupAllWhenReady();
