--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -27,7 +27,23 @@
                 <div text-angular ta-target-toolbars="toolbar" ng-model="note.description"></div>
                 <tabset>
                     <tab heading="Technical characteristics">
-                        Technical characteristics
+                        Enter your characteristic:
+                        <input type="text" ng-model="myCharacteristicName" />
+                        <br />
+                        or select existing:
+                        <div class="btn-group" dropdown is-open="status.isopen">
+                            <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+                                Select characteristic <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li ng-repeat="characteristic in allCharacteristics.Characteristics">
+                                    <a href="#" ng-click="dropdown(characteristic.Name)">{{characteristic.Name}}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <br />
+                        Enter value of characteristic:
+                        <input type="text" ng-model="myCharacteristicValue" />
                     </tab>
                     <tab heading="Photo">
                         Photo
@@ -46,7 +62,7 @@
             </div>
         </script>
         <div id="record" hidden="hidden" ng-controller="recordCtrl">
-            <img ng-src={{record.AvatarPath}} width="200" height="200"/>
+            <img ng-src={{record.AvatarPath}} width="200" height="200" />
             <div id="nameModel">
                 {{record.Name}}
             </div>
@@ -102,10 +118,10 @@
                             </tr>
                         </tbody>
                     </table>
-                <div class="modal-footer">
-                    <button class="btn btn-primary" ng-click="return()">Return</button>
-                    <button class="btn btn-warning" ng-click="close()">Close</button>
-                </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" ng-click="return()">Return</button>
+                        <button class="btn btn-warning" ng-click="close()">Close</button>
+                    </div>
             </script>
             <button class='btn btn-success' ng-click="open(record.Id_Category)">
                 Compare
@@ -186,7 +202,7 @@
                                 <br />
                                 Size:{{video.size}} Download by:{{video.user}}
                                 <br />
-                                <button id="sayFile" class="btn btn-primary" ng-click="sayThankToFile('document', $index)" ng-disabled="">
+                                <button id="sayFile" class="btn btn-primary" ng-click="sayThankToFile('video', $index)" ng-disabled="videoLike[$index]">
                                     To say thank you
                                 </button>
                             </div>
@@ -199,10 +215,10 @@
                     <tab heading="Documents">
                         <div ng-repeat="document in documents">
                             {{document.description}}[{{document.type}}] Size:{{document.size}} Download by:{{document.user}}
-                            <button class='btn btn-success' ng-click="">
+                            <button class='btn btn-success' ng-click="downloadDoc(document.path)">
                                 Download
                             </button>
-                            <button id="sayFile" class="btn btn-primary" ng-click="sayThankToFile('document', $index)" ng-disabled="">
+                            <button id="sayFile" class="btn btn-primary" ng-click="sayThankToFile('document', $index)" ng-disabled="documentLike[$index]">
                                 To say thank you
                             </button>
                             <hr />
@@ -212,11 +228,23 @@
                         </button>
                     </tab>
                 </tabset>
+                <script type="text/ng-template" id="addFileModal.html">
+                    <div class="modal-body">
+                        <input type="file" id="fileInput" />
+                        <br />
+                        <h3>Enter description:</h3>
+                        <div text-angular-toolbar class="toolbar" name="toolbar"></div>
+                        <div text-angular ta-target-toolbars="toolbar" ng-model="fileDescription"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" ng-click="add()">
+                            Add
+                        </button>
+                        <button class="btn btn-warning" ng-click="close()">Close</button>
+                    </div>
+                </script>
             </div>
         </div>
     </div>
 </div>
 
-<script type="text/javascript">
-    document.createElement('video'); document.createElement('audio'); document.createElement('track');
-</script>
