Fixed bug with angular

--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -43,39 +43,44 @@
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/ui.bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="~/Scripts/jquery.signalR-2.1.2.min.js"></script>
     <script src="~/signalr/hubs"></script>
+
     <script src="~/Scripts/angular-touch.js"></script>
     <script src="~/Scripts/myScripts/abn_tree_directive.js"></script>
-    <script src="~/Scripts/myScripts/App.js"></script>
-    <script src="~/Scripts/myScripts/catalogService.js"></script>
-    <script src="~/Scripts/myScripts/noteInfoService.js"></script>
-    <script src="~/Scripts/myScripts/userService.js"></script>
-    <script src="~/Scripts/myScripts/chacteristicService.js"></script>
-    <script src="~/Scripts/myScripts/catalogCtrl.js"></script>
-    <script src="~/Scripts/myScripts/modalCompareCtrl.js"></script>
-    <script src="~/Scripts/myScripts/recordCtrl.js"></script>
-    <script src="~/Scripts/myScripts/modalRecordCompare.js"></script>
-    <script src="~/Scripts/myScripts/addNoteCtrl.js"></script>
-    <script src="~/Scripts/myScripts/resourceCtrl.js"></script>
-    <script src="~/Scripts/myScripts/modalCharacteristic.js"></script>
-    <script src="~/Scripts/myScripts/addFileCtrl.js"></script>
-    <script src="~/Scripts/ui.bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="~/Scripts/textAngularSetup.js"></script>
     <script src="~/Scripts/textAngular.js"></script>
-    <script src="~/Scripts/dashboard/sb-admin-2.js"></script>
+    <script src="~/Scripts/textAngular-sanitize.js"></script>
+    <script src="~/Scripts/myScripts/loading-bar.js"></script>
+    <script src="~/Scripts/myScripts/angular-bootstrap-lightbox.js"></script>
+    <script src="~/Scripts/video.js"></script>
+
+    <script src="~/Scripts/myScripts/App.js"></script>
     <script src="~/Scripts/myScripts/mainCtrl.js"></script>
     <script src="~/Scripts/myScripts/messageCtrl.js"></script>
     <script src="~/Scripts/myScripts/usersInformationCtrl.js"></script>
     <script src="~/Scripts/myScripts/editUserCtrl.js"></script>
-    <script src="~/Scripts/myScripts/Autocomplete.js"></script>
     <script src="~/Scripts/myScripts/chatCtrl.js"></script>
-    <script src="~/Scripts/textAngular-sanitize.js"></script>
-    <script src="~/Scripts/myScripts/loading-bar.js"></script>
-    <script src="~/Scripts/myScripts/angular-bootstrap-lightbox.js"></script>
-    <script src="~/Scripts/myScripts/lightBoxCtrl.js"></script>
+
+    <script src="~/Scripts/myScripts/catalogService.js"></script>
+    <script src="~/Scripts/myScripts/noteInfoService.js"></script>
+    <script src="~/Scripts/myScripts/userService.js"></script>
+    <script src="~/Scripts/myScripts/chacteristicService.js"></script>
     <script src="~/Scripts/myScripts/fileUploadService.js"></script>
-    <script src="~/Scripts/video.js"></script>
+
+    <script src="~/Scripts/myScripts/catalogCtrl.js"></script>
+    <script src="~/Scripts/myScripts/recordCtrl.js"></script>
+    <script src="~/Scripts/myScripts/addNoteCtrl.js"></script>
+    <script src="~/Scripts/myScripts/modalCompareCtrl.js"></script>
+    <script src="~/Scripts/myScripts/modalRecordCompare.js"></script>
+    <script src="~/Scripts/myScripts/resourceCtrl.js"></script>
+    <script src="~/Scripts/myScripts/modalCharacteristic.js"></script>
+    <script src="~/Scripts/myScripts/addFileCtrl.js"></script>
+    <script src="~/Scripts/myScripts/lightBoxCtrl.js"></script>
+
+    @*<script src="~/Scripts/dashboard/sb-admin-2.js"></script>
+      <script src="~/Scripts/myScripts/Autocomplete.js"></script>*@
 
     @RenderSection("scripts", required: false)
 </body>
